--- a/css/main.css
+++ b/css/main.css
@@ -1665,11 +1665,13 @@ header {
     flex-basis: calc((100% - 90px) / 3);
   }
 }
+.propose__list:hover, .propose__list:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .propose__link {
   display: block;
   text-decoration: none;
   transition: box-shadow 250ms var(--timing-function);
-  border: 1px solid #eeeeee;
 }
 .propose__link:hover, .propose__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
