--- a/scss/layout/_portfolio-card.scss
+++ b/scss/layout/_portfolio-card.scss
@@ -40,15 +40,20 @@
       margin-right: 30px;
       flex-basis: calc((100% - 90px) / 3);
     }
-    
-  
+
+  }
+
+  &__list:hover,
+  &__list:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 
  &__link {
     display: block;
     text-decoration: none;
     transition: box-shadow 250ms var(--timing-function);
-    border: 1px solid #eeeeee;
+    
   }
   
  &__link:hover,
