--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -132,7 +132,6 @@ header {
   
     color: var(--primary-text-color);
     font-weight: 500;
-    line-height: 16px;
     letter-spacing: 0.02em;
     text-decoration: none;
 
@@ -145,13 +144,14 @@ header {
       padding-bottom: 10px;
 
     }
+
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.14;
+    }
+        
     
   }
-      
-    
-
-
-
   
   .adr-nav__link:hover,
   .adr-nav__link:focus {
